// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box bg prop sets background color 1`] = `
<div
  className="hKkbFv"
/>
`;

exports[`Box color prop sets color 1`] = `
<div
  className="jMnPJ"
  color="blue"
/>
`;

exports[`Box m prop sets margin 1`] = `
<div
  className="fkUMrN"
/>
`;

exports[`Box p prop sets padding 1`] = `
<div
  className="gzsaqe"
/>
`;

exports[`Box renders 1`] = `
<div
  className=""
/>
`;

exports[`Box width prop sets width 1`] = `
<div
  className="iMiDPN"
  width={0.5}
/>
`;
